--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HR Management Dashboard</title>
+
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/> 
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <style>
     :root {
       --primary-color: #4f46e5; 
       --bg-light: #f9fafb;
       --text-dark: #111827;
       --card-bg: #ffffff;
-      --shadow-sm: 0 1px 3px rgba(0,0,0,0.1);
+      --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.1);
       --transition: all 0.3s ease-in-out;
     }
 
@@ -112,43 +116,11 @@
       z-index: 999;
     }
 
-    .search-bar {
-      position: relative;
-    }
-
     .search-bar input {
       padding: 8px 12px;
       border: 1px solid #ccc;
       border-radius: 6px;
       width: 200px;
-    }
-
-    .suggestions {
-      position: absolute;
-      top: 45px;
-      left: 0;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      width: 200px;
-      max-height: 200px;
-      overflow-y: auto;
-      display: none;
-      z-index: 999;
-      padding: 0;
-      margin: 0;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-
-    .suggestions li {
-      list-style: none;
-      padding: 10px 15px;
-      cursor: pointer;
-      transition: background 0.2s ease;
-    }
-
-    .suggestions li:hover {
-      background-color: #f3f4f6;
     }
 
     .user-profile {
@@ -280,6 +252,80 @@
       margin-top: 40px;
     }
 
+    /* Dashboard Specific Styles */
+    .summary-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: var(--shadow-sm);
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .card i {
+      font-size: 28px;
+      color: var(--primary-color);
+    }
+
+    .info .count {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .info .label {
+      color: #6b7280;
+    }
+
+    .chart-container {
+      margin-top: 30px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: var(--shadow-sm);
+    }
+
+    canvas {
+      max-height: 300px;
+    }
+
+    .activity-feed {
+      margin-top: 30px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: var(--shadow-sm);
+    }
+
+    .activity-item {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .employee-table {
+      margin-top: 30px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: var(--shadow-sm);
+    }
+
     @media (max-width: 768px) {
       .hamburger {
         display: block;
@@ -326,8 +372,7 @@
         <i class="fas fa-bars"></i>
       </div>
       <div class="search-bar">
-        <input type="text" placeholder="Search..." id="searchInput">
-        <ul id="suggestionList" class="suggestions"></ul>
+        <input type="text" placeholder="Search...">
       </div>
       <div class="user-profile">
         <div class="notifications">
@@ -349,6 +394,7 @@
       <div class="page active" id="dashboard">
         <h2>Welcome, Pavan!</h2>
         <p>This is your HR dashboard. Use the sidebar to navigate to other sections.</p>
+
         <!-- Summary Cards -->
         <div class="summary-cards">
           <div class="card">
@@ -380,10 +426,12 @@
             </div>
           </div>
         </div>
+
         <!-- Chart -->
         <div class="chart-container">
           <canvas id="performanceChart"></canvas>
         </div>
+
         <!-- Activity Feed -->
         <div class="activity-feed">
           <h3>Recent Activity</h3>
@@ -396,6 +444,7 @@
             <span>Leave request approved for Virat</span>
           </div>
         </div>
+
         <!-- Employee Table -->
         <div class="employee-table">
           <table>
@@ -536,7 +585,7 @@
     // Default load
     showPage('dashboard');
 
-    // Handle sidebar menu clicks
+    // Handle click navigation
     links.forEach(link => {
       link.addEventListener('click', e => {
         e.preventDefault();
@@ -557,61 +606,6 @@
         sidebar.classList.toggle('active');
       });
     }
-
-    // Search functionality
-    const searchInput = document.getElementById('searchInput');
-    const suggestionList = document.getElementById('suggestionList');
-    const menuItems = [
-      { name: 'Dashboard', page: 'dashboard' },
-      { name: 'Add User', page: 'add-user' },
-      { name: 'Manage Employees', page: 'manage-employees' },
-      { name: 'Departments', page: 'departments' },
-      { name: 'Attendance', page: 'attendance' },
-      { name: 'Leave Requests', page: 'leave-requests' },
-      { name: 'Settings', page: 'settings' }
-    ];
-
-    function showSuggestions(matches) {
-      suggestionList.innerHTML = '';
-      if (matches.length === 0) {
-        suggestionList.style.display = 'none';
-        return;
-      }
-
-      matches.forEach(item => {
-        const li = document.createElement('li');
-        li.textContent = item.name;
-        li.addEventListener('click', () => {
-          showPage(item.page);
-          searchInput.value = item.name;
-          suggestionList.style.display = 'none';
-        });
-        suggestionList.appendChild(li);
-      });
-
-      suggestionList.style.display = 'block';
-    }
-
-    searchInput.addEventListener('input', function () {
-      const query = this.value.toLowerCase().trim();
-      if (!query) {
-        suggestionList.style.display = 'none';
-        return;
-      }
-
-      const matches = menuItems.filter(item =>
-        item.name.toLowerCase().includes(query)
-      );
-
-      showSuggestions(matches);
-    });
-
-    // Hide suggestions when clicking outside
-    document.addEventListener('click', function (event) {
-      if (!document.querySelector('.search-bar').contains(event.target)) {
-        suggestionList.style.display = 'none';
-      }
-    });
 
     // Add User Form Submission
     document.querySelector('#add-user form').addEventListener('submit', function () {
